# screensense-agent

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/en/: technical_report_v0_1.md
scripts/: run_dev.sh
src/: capture.py  context.py  logger.py  main.py  ocr.py  overlay.py  suggestion.py  vision.py
tests/manual/: n10_summary.md
tests/manual/aggregate/: summary_table.csv  summary_table.md
